--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "joi": "^17.11.0",
