--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "lodash": "^4.17.21",
     "nodemon": "^3.0.1",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "typescript": "^5.3.2"
   }
 }
