--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.5",
     "typescript": "^5.3.2"
   }
 }
