--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,23 @@
 {
-
   "compilerOptions": {
+    /* Visit https://aka.ms/tsconfig to read more about this file */
 
-    "target": "es6",
+    /* Language and Environment */
+    "target": "es6" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
 
-    "module": "eS6",
-    "moduleResolution": "node",
+    /* Modules */
+    "module": "ES6",
+    "moduleResolution": "node" /* Specify what module code is generated. */,
+    "rootDir": "./src" /* Specify the root folder within your source files. */,
 
-    "outDir": "./dist",
+    /* Emit */
 
-    "rootDir": "./src",
+    "outDir": "./dist" /* Specify an output folder for all emitted files. */,
+    "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
+    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
 
-    "strict": true
-
+    /* Type Checking */
+    "strict": true /* Enable all strict type-checking options. */,
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */
   }
-
 }
