--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "mongoose": "^8.0.2",
     "nodemon": "^3.0.1",
     "xlsx": "^0.18.5"
   },
