--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "./src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install",
+    "lint" : "eslint src/**/*.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +16,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "husky": "^8.0.3",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -26,6 +29,15 @@
     "@types/http-errors": "^2.0.4",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.0",
     "typescript": "^5.3.2"
   }
 }
