--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "type": "module",
   "name": "backend-training",
   "version": "1.0.0",
   "description": "",
   "main": "./src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon dist/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +19,12 @@
     "lodash": "^4.17.21",
     "nodemon": "^3.0.1",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.5",
+    "typescript": "^5.3.2"
   }
 }
