--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.4",
     "@types/joi": "^17.2.3",
