--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "csvtojson": "^2.0.10",
     "express": "^4.18.2",
+    "fast-csv": "^4.3.6",
     "http-errors": "^2.0.0",
     "husky": "^8.0.3",
     "joi": "^17.11.0",
