--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.0.2",
     "multer": "^1.4.5-lts.1",
     "papaparse": "^5.4.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
+    "winston": "^3.11.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
